syntax = "proto3";

option java_multiple_files = true;
option java_package = "RUT.smart_home_analytics_service";

service SensorAnalyticsService {
  rpc AnalyzeSensorData (SensorDataRequest) returns (DecisionResponse) {}
}

message SensorDataRequest {
  int64 reading_id = 1;
  int64 sensor_id = 2;
  string sensor_type = 3;
  double value = 4;
  string timestamp = 5;
}

message DecisionResponse {
  bool should_execute = 1;
  string sensor_type = 2;
  CommandData command_data = 3;
}

message CommandData {
  int64 sensor_id = 1;
  string command_action = 2;
  string command_value = 3;
}