syntax = "proto3";

option java_multiple_files = true;
option java_package = "RUT.smart_home";

service CommandService {
  rpc BuildCommand (CommandHomeRequest) returns (CommandHomeResponse) {}
}

message CommandHomeRequest {
  int64 sensor_id = 1;
  string sensor_type = 2;
  double value = 3;
}

message CommandHomeResponse {
  string command_action = 1;
  string command_value = 2;
}